Flesh out .tmux.conf
Include many useful config ideas from
http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,45 @@
+# Much of this config has been pulled from Ham Vocke's guide here:
+# http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
+
+# remap prefix from 'C-b' to 'C-a'
+#unbind C-b
+#set-option -g prefix C-a
+#bind-key C-a send-prefix
+
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
+
+# switch panes using Alt-arrow without prefix
+#bind -n M-Left select-pane -L
+#bind -n M-Right select-pane -R
+#bind -n M-Up select-pane -U
+#bind -n M-Down select-pane -D
+# Actually, use vim motion keys here (especially since arrows in Terminal fail)
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+
+# Enable mouse mode (tmux 2.1 and above)
+set -g mouse on
+
+# To copy, drag to highlight text in yellow, press Enter and then release mouse
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+# Setup 'v' to begin selection as in Vim
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-pipe "pbcopy"
+# Update default binding of `Enter` to also use copy-pipe
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "pbcopy"
+
+# Fix up vim and bash escape handling
+set escape-time 0
+
 set -g update-environment -r
